confik-macros/tests/trybuild/compile-fail/struct-default-on-enum.stderr
error: `#[confik(struct_default)]` is only supported on struct fields
 --> tests/trybuild/compile-fail/struct-default-on-enum.rs:6:9
  |
6 |         #[confik(struct_default)]
  |         ^
